--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,14 @@ configurations {
 	}
 }
 
+jar {
+	manifest {
+		attributes(
+				'Main-Class': 'com.telekom.hackfest.rewardsystem.RewardsystemApplication'
+		)
+	}
+}
+
 repositories {
 	mavenCentral()
 }
