--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ configurations {
 jar {
 	manifest {
 		attributes(
+				'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
 				'Main-Class': 'com.telekom.hackfest.rewardsystem.RewardsystemApplication'
 		)
 	}
