--- a/build.gradle
+++ b/build.gradle
@@ -14,11 +14,9 @@ configurations {
 	}
 }
 
-jar {
+tasks.jar {
 	manifest {
-		attributes(
-				'Main-Class': 'com.telekom.hackfest.rewardsystem.RewardsystemApplication'
-		)
+		attributes["Main-Class"] = "com.telekom.hackfest.rewardsystem.RewardsystemApplication"
 	}
 }
 
